Fix: Control column disable no longer uses `:first-child`, allow the first column to be hidden, while the control icon is still shown in the visible first column. This is done through a class name (`dtr-control`) which is dynamically updated on the cells as needed
CT-1244

--- a/css/responsive.dataTables.scss
+++ b/css/responsive.dataTables.scss
@@ -58,8 +58,8 @@ table.dataTable {
 			}
 		}
 
-		> tr[role="row"] > td:first-child,
-		> tr[role="row"] > th:first-child {
+		> tr[role="row"] > td.dtr-control,
+		> tr[role="row"] > th.dtr-control {
 			position: relative;
 			padding-left: 30px;
 			cursor: pointer;
@@ -75,8 +75,8 @@ table.dataTable {
 		}
 
 		> tr.parent {
-			> td:first-child:before,
-			> th:first-child:before {
+			> td.dtr-control:before,
+			> th.dtr-control:before {
 				@include control-close;
 			}
 		}
@@ -84,8 +84,8 @@ table.dataTable {
 
 	// DataTables' `compact` styling
 	&.dtr-inline.collapsed.compact > tbody {
-		> tr > td:first-child,
-		> tr > th:first-child {
+		> tr > td.dtr-control,
+		> tr > th.dtr-control {
 			padding-left: 27px;
 
 			&:before {
